# Nebula

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  package-lock.json  package.json
.github/: CODEOWNERS  pull_request_template.md
agent-app/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
agent-app/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
agent-app/src-tauri/icons/: icon.icns
agent-app/src-tauri/src/: lib.rs  main.rs  runtime.rs  tests.rs  ws_client.rs
agent-client/: README.md  index.js  package-lock.json  package.json
docs/: ADDING_CLI_RUNTIMES.md  memory-system-spec.md  paper-draft.md  projects-spec.md
frontend/: i18next.config.ts  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
migrations/: 001_initial.sql  002_usage_events.sql  003_agent_backend.sql  004_org_secrets.sql  005_projects.sql  006_project_webhook_secrets.sql  007_mcp_servers.sql  008_agent_secrets.sql  009_agent_timeout.sql  010_usage_error_message.sql  011_conversation_session_branch.sql  012_message_reply_to.sql  013_task_project_scope.sql  014_project_secrets.sql  015_project_timeout.sql  016_project_readiness.sql  017_agent_initialized.sql  018_project_api_url.sql  019_project_launch.sql  020_memories.sql  021_oauth.sql  022_default_runtime.sql  023_recovery_token_budget.sql  024_mention_context_settings.sql  025_task_timeout_nullable.sql  026_clear_stale_task_timeouts.sql  027_agent_mcp_auto_reset.sql  028_conversation_session_runtime.sql  (+4 more)
(+196 files in other folders)
